--- a/Interficies/index.html
+++ b/Interficies/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/riot-games-rgb-logos-web/Riot Games RGB Logos (Web)/001_RG 2021 Logomark/001.1_RG_2021_LOGOMARK_RED.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Riot Games</title>
   </head>
